--- a/.github/workflows/mirror-openai-json.yml
+++ b/.github/workflows/mirror-openai-json.yml
@@ -1,9 +1,9 @@
-name: Mirror JSON from OpenAI to Gist
+name: Mirror JSON from OpenAI to Gist.yml
 
 on:
-  workflow_dispatch:       # Allows manual triggering
+  workflow_dispatch:
   schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 minutes
+    - cron: '*/15 * * * *'
 
 jobs:
   update-gist:
